Arcane crafter is a separate block now

--- a/src/main/resources/assets/thaumtweaks/lang/en_us.lang
+++ b/src/main/resources/assets/thaumtweaks/lang/en_us.lang
@@ -1,2 +1,8 @@
 # Items
-item.thaumtweaks:filler.name=Arcane filler
+item.thaumtweaks:filler.name=Arcane Filler
+item.thaumtweaks:arcane_crafter.name=Arcane Crafter
+
+tile.thaumtweaks:crafter.name=Arcane Crafter
+
+
+itemGroup.thaumtweaks=ThaumTweaks
